force-app/main/default/objects/OCX_Feature_Ingredient__c/OCX_Feature_Ingredient__c.object-meta.xml
<CustomObject>
    <description>Field-level recipe lineage connecting a feature definition to source ingredients.</description>
    <label>Feature Ingredient</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Feature Ingredient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>