force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/Ingredient_Role__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Role__c</fullName>
    <label>Ingredient Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>