force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/Is_Benchmark_Feature__c.field-meta.xml
<CustomField>
    <fullName>Is_Benchmark_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Benchmark Feature</label>
    <type>Checkbox</type>
</CustomField>