force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/Is_Cohort_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Is_Cohort_Dimension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cohort Dimension</label>
    <type>Checkbox</type>
</CustomField>