force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/Is_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Filter_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Filter Field</label>
    <type>Checkbox</type>
</CustomField>