force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/OCX_Feature_Definition__c.field-meta.xml
<CustomField>
    <fullName>OCX_Feature_Definition__c</fullName>
    <label>Feature Definition</label>
    <referenceTo>OCX_Feature_Definition__c</referenceTo>
    <relationshipLabel>Feature Ingredients</relationshipLabel>
    <relationshipName>Feature_Ingredients</relationshipName>
    <type>MasterDetail</type>
</CustomField>