force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/OCX_Source_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Ingredient__c</fullName>
    <label>Source Ingredient</label>
    <referenceTo>OCX_Source_Ingredient__c</referenceTo>
    <relationshipLabel>Feature Uses</relationshipLabel>
    <relationshipName>Feature_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>