force-app/main/default/objects/OCX_Feature_Ingredient__c/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <label>Transform</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>